# speech_server

./: .gitignore  app.py  pyproject.toml
api/controller/: speech.py
api/model/: googlehome.py  voicetext.py
static/: index.html
